--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@ body {
     background: #CCCCCC
 }
 
+h1 {
+    text-align: center
+}
+
 p·{
     text-align: center;
 }
 
+#missao {
+    style="font-size: 20px"
+}
+
  em strong {
-    color: red;
+    color: #FF0000;
 }
